Add functions to retrieve logged-in user info, improve Swagger API, and minor fixes